# neural-incomplete-factorization

./: .gitignore  pyproject.toml  requirements.txt  test.py  train.py
apps/: data.py  poisson.py  symbolic.py  synthetic.py
extract_symbolic/: Makefile  decode_psym.py  extract_symbolic.c  mmio_csr.h  pardiso.h  pt_to_mtx.py  run.sh
neuralif/: loss.py  models.py  utils.py
scripts/: eval_poisson_alex.sh  eval_synthetic_alex.sh  gen_poisson.sh  gen_synthetic.sh  install_alex.sh  train_poisson_alex.sh  train_syntetic_alex.sh
