[project]
name = "neural-incomplete-factorization"
version = "0.1.0"
description = "Fork of NeuralIF"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.2",
    "torch-geometric>=2.5",
    "scipy>=1.11",
    "networkx>=3.0",
    "numpy>=1.26",
    "matplotlib>=3.7",
    "psutil>=5.9",
    "ilupp>=1.0.2",
    "numml",
    "scikit-fem>=12.0.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
numml = { git = "https://github.com/nicknytko/numml" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
package = false
